# py-tisgrabber

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py  index.rst  install.rst
examples/: 01-live.py  02-open-manually.py  03-load-by-file.py  03-save-to-file.py  04-list-properties.py  05-properties.py  05-properties2.py  05-properties3.py  06-list-devices.py  07-roi.py  07-roi2.py  10-save-image.py  11-image-processing.py  15-list-codecs.py  16-capture-avi-file.py  20-callback.py  22-framefilter.py  32-trigger-callback.py  33-device-lost-event.py  41-qt-triggering.py  device.xml
tests/: py_tisgrabber_test.py
tisgrabber/: cam.py  enums.py  exceptions.py  structs.py  tisgrabber.py  wrapper.py
tisgrabber/dll/: README.md
tisgrabber/dll/3.3.0.12/: index.chm
tisgrabber/dll/3.4.0.51/: tisgrabber_import.py
tisgrabber/dll/3.4.0.51/win32/: tisgrabber.lib
tisgrabber/dll/github-samples/: tisgrabber.chm
