[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tisgrabber"
description = "Wrapper for IC-Imaging-Control by The Imaging source for modern Python."
authors = [
  { name = "Bastian Leykauf" },
  { email = "leykauf@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black>=22.8.0",
  "pre-commit>=2.20.0",
  "flake8>=5.0.4",
  "rope>=1.3.0",
  "isort>=5.10.1",
  "Flake8-pyproject>=1.1.0.post0",
  "setuptools_scm>=6.2",
]
examples = ["matplotlib"]

[tool.setuptools.package-data]
dlls = ["*.dll"]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/bleykauf/py-tisgrabber"
repository = "https://github.com/bleykauf/py-tisgrabber"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
